tests/neg/objects/opt-fields-01.ts

/*@ opt :: { f?: [Mutable] {number | v > 0 } } */
var opt: { f?: number } = { } ;

opt.f = -1;

